[gd_scene load_steps=3 format=3 uid="uid://dlwdcdy7fcj1l"]

[ext_resource type="Script" path="res://Menus/character_selection_screen.gd" id="1_qq07j"]
[ext_resource type="Texture2D" uid="uid://nn5h4ffrbmdm" path="res://pixil-frame-1.webp" id="1_spy8l"]

[node name="CharacterSelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qq07j")

[node name="CigarGuyButton" type="Button" parent="."]
layout_mode = 0
offset_right = 72.0
offset_bottom = 72.0
keep_pressed_outside = true
icon = ExtResource("1_spy8l")

[node name="ConfirmButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_top = 256.0
offset_right = 128.0
offset_bottom = 320.0
text = "CONFIRM"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Characters/player_1.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CigarGuyButton" to="." method="_on_cigar_guy_button_pressed"]
[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
